Panama second cut
Temp fix for some generated structures.
Revamped transformers and registry.
First cut for array transformer.
Introduced native library as a type.
Factored out structure transformer and factory.
Added integer by-reference and pointer.
Split Vulkan library.
Slight refactor of some Vulkan components to reduce constructors.