@@ -1,12 +1,12 @@
 package org.sarge.jove.platform.vulkan.core;
 
-import static java.util.Objects.requireNonNull;
-import static org.sarge.lib.Validation.requireNotEmpty;
-
 import java.util.*;
+import java.util.Map.Entry;
+import java.util.function.Function;
 
 import org.sarge.jove.platform.vulkan.*;
 import org.sarge.jove.platform.vulkan.core.Command.*;
+import org.sarge.jove.util.EnumMask;
 
 /**
  * A <i>work</i> instance represents a group of tasks to be submitted to a {@link WorkQueue}.
@@ -21,80 +21,112 @@ import org.sarge.jove.platform.vulkan.core.Command.*;
  * <p>
  * Note that <b>all</b> command buffers in a work submission <b>must</b> be allocated from pools with the same queue family.
  * <p>
- * Usage:
- * <pre>
- * // Record a command buffer
- * Command.Buffer buffer = ...
- *
- * // Init synchronisation
- * Semaphore wait = ...
- * Semaphore signal = ...
- *
- * // Create work submission
- * Work work = new Builder()
- *     .add(buffer)
- *     .wait(wait, VkPipelineStage.TOP_OF_PIPE)
- *     .signal(signal)
- *     .build();
- *
- * // Submit work
- * Fence fence = ...
- * work.submit(fence);
- *
- * // Submit a batch of work
- * Work.submit(List.of(work, ...), fence);
- * </pre>
  * @see Command
  * @author Sarge
  */
-public final class Work {
+public record Work(List<CommandBuffer> buffers, Map<VulkanSemaphore, Set<VkPipelineStage>> waiting, Set<VulkanSemaphore> signal) {
 	/**
-	 * Helper - Creates a new work submission for the given command buffer.
-	 * @param buffer Command buffer
-	 * @return Work
+	 * Constructor.
+	 * @param buffers		Command buffers
+	 * @param waiting		Table of wait semaphores and pipeline stage(s)
+	 * @param signal		Semaphores to be signalled
+	 * @throws NoSuchElementException if {@link #buffers} is empty
+	 * @throws IllegalStateException if any buffer has not been recorded
+	 * @throws IllegalStateException unless all buffers submit to the same queue family
+	 * @throws IllegalArgumentException if any semaphore is used as both a wait and signal
 	 */
-	public static Work of(CommandBuffer buffer) {
-		return Builder.of(buffer).build();
-	}
+	public Work {
+		// Check all buffers have been recorded and submit to the same queue
+		validate(buffers);
+		verify(buffers, CommandBuffer::pool);
 
-	private final List<CommandBuffer> buffers = new ArrayList<>();
-	private final Map<VulkanSemaphore, Set<VkPipelineStage>> wait = new LinkedHashMap<>();
-	private final Set<VulkanSemaphore> signal = new HashSet<>();
+		// Check semaphores
+		if(!Collections.disjoint(signal, waiting.keySet())) {
+			throw new IllegalArgumentException("Semaphores cannot be used as both a wait and a signal");
+		}
 
-	private Work() {
+		buffers = List.copyOf(buffers);
+		waiting = Map.copyOf(waiting);
+		signal = Set.copyOf(signal);
 	}
 
 	/**
-	 * @return Command pool for this submission
+	 * @throws IllegalStateException if any buffer has not been recorded
+	 */
+	private static void validate(List<CommandBuffer> buffers) {
+		for(var b : buffers) {
+			if(!b.isReady()) {
+				throw new IllegalStateException("Buffer has not been recorded: " + b);
+			}
+		}
+	}
+
+	/**
+	 * Checks that the given work submissions all submit to the same queue family.
+	 * @param <T> Work type
+	 * @param work		Work submissions
+	 * @param mapper	Returns the command pool of the work submission
+	 * @return Common command pool
+	 * @see CommandPool#matches(CommandPool)
+	 */
+	private static <T> CommandPool verify(List<T> work, Function<T, CommandPool> mapper) {
+		// Determine the expected command pool
+		final CommandPool expected = mapper.apply(work.getFirst());
+
+		// Check all submissions submit to the same family
+		for(T item : work) {
+			final CommandPool actual = mapper.apply(item);
+			if(!expected.matches(actual)) {
+				throw new IllegalArgumentException("Work submission does not submit to the common queue family: work=%s pool=%s".formatted(item, expected));
+			}
+		}
+
+		return expected;
+	}
+
+	/**
+	 * @return Command pool for this work
 	 */
 	public CommandPool pool() {
-		return buffers.get(0).pool();
+		return buffers.getFirst().pool();
 	}
 
-//	/**
-//	 * Populates the submission descriptor for this work.
-//	 */
-//	private void populate(VkSubmitInfo info) {
-//		// TODO
-//
-//		// Populate command buffers
-//		info.commandBufferCount = buffers.size();
-//		info.pCommandBuffers = NativeObject.array(buffers);
-//
-//		if(!wait.isEmpty()) {
-//			// Populate wait semaphores
-//			info.waitSemaphoreCount = wait.size();
-//			info.pWaitSemaphores = NativeObject.array(wait.keySet());
-//
-//			// Populate pipeline stage flags (which for some reason is a pointer to an integer array)
-//			final int[] stages = wait.values().stream().map(BitMask::new).mapToInt(BitMask::bits).toArray();
-//			info.pWaitDstStageMask = new PointerToIntArray(stages);
-//		}
-//
-//		// Populate signal semaphores
-//		info.signalSemaphoreCount = signal.size();
-//		info.pSignalSemaphores = NativeObject.array(signal);
-//	}
+	/**
+	 * @return Submission descriptor for this work
+	 */
+	private VkSubmitInfo build() {
+		// Populate command buffers
+		final var info = new VkSubmitInfo();
+		info.commandBufferCount = buffers.size();
+		info.pCommandBuffers = buffers.toArray(CommandBuffer[]::new);
+
+		// Create a temporary copy of the wait table entries such that they can be iterated consistently below
+		final var entries = waiting
+				.entrySet()
+				.stream()
+				.toList();
+
+		// Populate wait semaphores
+		info.waitSemaphoreCount = entries.size();
+		info.pWaitSemaphores = entries
+				.stream()
+				.map(Entry::getKey)
+				.toArray(VulkanSemaphore[]::new);
+
+		// Populate pipeline stage flags (for some reason this is a pointer to an int-array)
+		info.pWaitDstStageMask = entries
+				.stream()
+				.map(Entry::getValue)
+				.map(EnumMask::new)
+				.mapToInt(EnumMask::bits)
+				.toArray();
+
+		// Populate signal semaphores
+		info.signalSemaphoreCount = signal.size();
+		info.pSignalSemaphores = signal.toArray(VulkanSemaphore[]::new);
+
+		return info;
+	}
 
 	/**
 	 * Submits this work for execution.
@@ -106,24 +138,15 @@ public final class Work {
 	}
 
 	/**
-	 * Submits a batch of work for execution.
+	 * Submits a work batch for execution.
 	 * @param batch		Work batch
-	 * @param fence		Optional fence
-	 * @throws IllegalArgumentException if the batch does not submit to the same queue family
+	 * @param fence		Optional fence signalled once <b>all</b> submitted buffers have been executed
 	 * @throws NoSuchElementException if the batch is empty
+	 * @throws IllegalStateException unless batches submit to the same queue family
 	 */
-	public static void submit(Collection<Work> batch, Fence fence) {
-		// Check batch submits to same queue
-		// TODO - integrate into build()?
-		final Iterator<Work> work = batch.iterator();
-		final CommandPool pool = work.next().pool();
-		final WorkQueue queue = pool.queue();
-		while(work.hasNext()) {
-			final var family = work.next().pool().queue().family();
-			if(!family.equals(queue.family())) {
-				throw new IllegalArgumentException(String.format("Work batch does not submit to the same queue family: queue=%s work=%s", queue, work));
-			}
-		}
+	public static void submit(List<Work> batch, Fence fence) {
+		// Check all work in this batch submits to same queue
+		final CommandPool pool = verify(batch, Work::pool);
 
 		// Build batch descriptors
 		final VkSubmitInfo[] info = batch
@@ -133,24 +156,7 @@ public final class Work {
 
 		// Submit batch
 		final VulkanLibrary lib = pool.device().vulkan();
-		lib.vkQueueSubmit(queue, info.length, info, fence);
-	}
-
-	private static VkSubmitInfo build(Work work) {
-		final var info = new VkSubmitInfo();
-		// TODO
-		return info;
-	}
-
-	@Override
-	public boolean equals(Object obj) {
-		return
-				(obj == this) ||
-				(obj instanceof Work that) &&
-				this.pool().equals(that.pool()) &&
-				this.buffers.equals(that.buffers) &&
-				this.wait.equals(that.wait) &&
-				this.signal.equals(that.signal);
+		lib.vkQueueSubmit(pool.queue(), info.length, info, fence);
 	}
 
 	/**
@@ -173,15 +179,20 @@ public final class Work {
 	}
 
 	/**
-	 * Helper - Submits the given command buffer and waits for completion.
+	 * Helper - Submits the given command buffer and blocks until it is completed.
 	 * @param buffer Command buffer
-	 * @see #submit(Command, CommandPool)
 	 */
 	public static void submit(CommandBuffer buffer) {
+		// Create bounding fence
 		final LogicalDevice dev = buffer.pool().device();
 		final Fence fence = Fence.create(dev);
+
+		// Create work instance
+		final Work work = new Builder().add(buffer).build();
+
+		// Submit work and block
 		try {
-			Work.of(buffer).submit(fence);
+			work.submit(fence);
 			fence.waitReady();
 		}
 		finally {
@@ -194,44 +205,16 @@ public final class Work {
 	 * Builder for a work submission.
 	 */
 	public static class Builder {
-		/**
-		 * Helper - Creates a new work builder for the given command buffer.
-		 * @param buffer Command buffer
-		 * @return New work builder
-		 */
-		public static Builder of(CommandBuffer buffer) {
-			return new Builder().add(buffer);
-		}
-
-		private Work work = new Work();
-		private WorkQueue queue;
+		private final List<CommandBuffer> buffers = new ArrayList<>();
+		private final Map<VulkanSemaphore, Set<VkPipelineStage>> wait = new HashMap<>();
+		private final Set<VulkanSemaphore> signal = new HashSet<>();
 
 		/**
 		 * Adds a command buffer to be submitted.
 		 * @param buffer Command buffer
-		 * @throws IllegalStateException if the command buffer has not been recorded
-		 * @throws IllegalArgumentException if {@link #buffer} does not match the queue family for this work
 		 */
 		public Builder add(CommandBuffer buffer) {
-			// Check buffer has been recorded
-			if(!buffer.isReady()) {
-				throw new IllegalStateException("Command buffer has not been recorded: " + buffer);
-			}
-
-			// Check all work is submitted to the same queue family
-			final WorkQueue that = buffer.pool().queue();
-			if(queue == null) {
-				queue = that;
-			}
-			else {
-    			if(!queue.family().equals(that.family())) {
-    				throw new IllegalArgumentException("Command buffer must submit to the queue family of this work: buffer=%s expected=%s".formatted(buffer, queue));
-    			}
-			}
-
-			// Add buffer to this work
-			work.buffers.add(buffer);
-
+			buffers.add(buffer);
 			return this;
 		}
 
@@ -239,24 +222,10 @@ public final class Work {
 		 * Adds a wait semaphore that must be signalled before this batch can be executed.
 		 * @param semaphore 	Wait semaphore
 		 * @param stages		Pipeline stage(s) at which this semaphore will be signalled
-		 * @throws IllegalArgumentException if {@code stages} is empty
-		 * @throws IllegalArgumentException for a duplicate semaphore
 		 */
 		public Builder wait(VulkanSemaphore semaphore, Set<VkPipelineStage> stages) {
-			requireNonNull(semaphore);
-			requireNotEmpty(stages);
-			if(work.wait.containsKey(semaphore)) {
-				throw new IllegalArgumentException(String.format("Duplicate wait semaphore: %s (%s)", semaphore, stages));
-			}
-			work.wait.put(semaphore, Set.copyOf(stages));
+			wait.put(semaphore, stages);
 			return this;
-		}
-
-		/**
-		 * @see #wait(VulkanSemaphore, Collection)
-		 */
-		public Builder wait(VulkanSemaphore semaphore, VkPipelineStage... stages) {
-			return wait(semaphore, Set.of(stages));
 		}
 
 		/**
@@ -264,30 +233,17 @@ public final class Work {
 		 * @param semaphore Semaphore to be signalled
 		 */
 		public Builder signal(VulkanSemaphore semaphore) {
-			requireNonNull(semaphore);
-			work.signal.add(semaphore);
+			signal.add(semaphore);
 			return this;
 		}
 
 		/**
 		 * Constructs this work.
 		 * @return New work
-		 * @throws IllegalArgumentException if no command buffers have been added or any semaphore is used as both a wait and signal
+		 * @see Work#Work(List, Map, Set)
 		 */
 		public Work build() {
-			if(work.buffers.isEmpty()) {
-				throw new IllegalArgumentException("No command buffers specified");
-			}
-			if(!Collections.disjoint(work.signal, work.wait.keySet())) {
-				throw new IllegalArgumentException("Semaphore cannot be used as both wait and signal");
-			}
-
-			try {
-				return work;
-			}
-			finally {
-				work = null;
-			}
+			return new Work(buffers, wait, signal);
 		}
 	}
 }
